# parsimonious-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
bench/python/: compare_with_upstream.py  run_release_compare.sh
crates/parsimonious/: Cargo.toml
crates/parsimonious-py/: Cargo.toml
crates/parsimonious-py/src/: cache.rs  expr.rs  lib.rs  node.rs
crates/parsimonious/benches/: parse.rs
crates/parsimonious/src/: lib.rs
python/parsimonious/: __init__.py  _errors.py  exceptions.py  expressions.py  grammar.py  nodes.py  utils.py
